# nats-connector

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/diagrams/: classes.puml  main_sequence.puml
include/: INatsManager.h  INatsPublisher.h  INatsSubscriber.h  MathPicker.h  NatsManager.h  NatsPublisher.h  NatsSubscriber.h  http_handler.h  i_nats_manager.h  logger.h  math_picker.h  nats_manager.h
src/: MathPicker.cpp  NatsManager.cpp  NatsPublisher.cpp  NatsSubscriber.cpp  http_handler.cpp  logger.cpp  main.cpp  math_picker.cpp  nats_manager.cpp
tests/: MathPickerTest.cpp  NatsManagerTest.cpp  StderrCapture.cpp  StderrCapture.h  http_handler_tests.cpp  nats_manager_tests.cpp  std_err_capture.cpp  std_err_capture.h
